--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+/* Keyframe para la animacion de carga */
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", serif;
 }
 
 body{
@@ -19,6 +31,20 @@ body{
     min-height: 100vh;
 }
 
+/* Todos los container son invisibles hasta que la animacion de carga se completa */	
+.container{
+    opacity: 0;
+}
+
+h2{
+    text-align: center;
+    margin-bottom: 0.4em;
+    font-size: 1.6em;
+    background: linear-gradient(90deg, #00ff88, #ffe600);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 #presentation{
     grid-gap: 10px;
     padding: 10px;
@@ -26,6 +52,9 @@ body{
     border-radius: 10px;
     grid-column: 1 / 4;
     grid-row: 1 / 3;
+
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.1s;
 }
 
 #es_en{
@@ -36,6 +65,9 @@ body{
     border-radius: 10px;
     grid-column: 4 / 5;
     grid-row: 1 / 2;
+
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.2s;
 }
 
 #CV{
@@ -46,34 +78,88 @@ body{
     border-radius: 10px;
     grid-column: 4 / 5;
     grid-row: 2 / 3;
+
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.4s;
 }
 
-#tools{
-    background-color: #FC440F;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-}
 
 #projects{
-    background-color: #95C623;
+    background-color: #444;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     grid-column: 3 / 5;
     grid-row: 3 / 4;
-}
 
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.5s;
+}
+/* Container de tecnologias ------------------------*/
 #lenguages{
     background-color: #444;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+    padding: 1em;
+
+
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.5s;
+}
+
+#img_lenguages{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+#img_lenguages img{
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+}
+
+#img_lenguages img:hover{
+    transform: scale(1.1);
+}
+
+/* Container de herramientas -------------------------*/
+
+#tools{
+    background-color: #444;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    padding: 1em;
+
+    animation: slideDown 1s ease-out forwards;
+    animation-delay: 0.5s;
+}
+
+#img_tools{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+#img_tools img{
+    width: 100%;
+    height: 100%;
+    transition: 0.2s;
+}
+
+#img_tools img:hover{
+    transform: scale(1.1);
 }
