--- a/style.css
+++ b/style.css
@@ -1128,3 +1128,126 @@ main {
     margin-top: 0.5rem;
     font-weight: 600;
 }
+
+/* =============================================================================
+   5. MEDIA QUERIES
+============================================================================= */
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    body {
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(6, auto);
+        gap: 3rem;
+        margin: 1rem;
+        width: 90%;
+    }
+
+    main {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        display: flex;
+        flex-direction: column;  /* Change from row to column */
+        align-items: center; 
+        
+    }
+
+    #text_profile {
+        padding-top: 0;
+        text-align: center; /* Center text for mobile */
+    }
+
+    .top-content {
+        display: flex;
+        flex-direction: column-reverse;  /* Change from row to column */
+        justify-content: center;
+        align-items: center;     /* Center horizontally */
+    }
+
+    .profile-image-container {
+        margin: 0 auto; /* Center the image container */
+        max-height: 130%;
+    }
+
+    .profile-image-container img {
+        width: 100%;
+        height: 100%;
+        max-width: 300px; /* Set a max width for mobile */
+        border-radius: 15px;
+        object-fit: cover;
+    }
+
+    #CV {
+        grid-column: 1 / -1;
+        grid-row: 2 / 3;
+        padding: 0.5rem;
+    }
+
+    #CV .cv-images {
+        width: 80%;
+    }
+
+    #lenguages {
+        grid-column: 1 / -1;
+        grid-row: 3 / 4;
+        padding: 0.5rem;
+    }
+
+    #tools {
+        grid-column: 1 / -1;
+        grid-row: 4 / 5;
+        padding: 0.5rem;
+    }
+
+    #projects {
+        grid-column: 1 / -1;
+        grid-row: 5 / 6;
+        padding: 0.5rem;
+
+    }
+
+    .projects-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    #education {
+        grid-column: 1 / -1;
+        grid-row: 6 / 7;
+        padding: 0.5rem;
+    }
+
+    .education-items{
+        width: 45%;
+    }
+
+    #about_me {
+        grid-column: 1 / -1;
+        grid-row: 7 / 8;
+        padding: 0.5rem;
+    }
+
+    #about_me p{
+
+        margin: 1rem
+       
+    }
+
+    #contact {
+        grid-column: 1 / -1;
+        grid-row: 8 / 9;
+        padding: 0.5rem;
+    }
+
+
+
+
+
+
+
+
+}
+
